Fix breadcrumbs item padding
Padding-right of all breadcrumbs items after the first was too wide.

--- a/Resources/Private/Scss/Sections/_breadcrumbs.scss
+++ b/Resources/Private/Scss/Sections/_breadcrumbs.scss
@@ -10,7 +10,7 @@
 
 		+ li {
 			@include icon('angle-right', $text-color-light);
-			padding: 0 .25em;
+			padding-left: .25em;
 		}
 	}
 }
